# yod

./: .gitignore  Justfile  TODO.MD  main.py  pyproject.toml
tests/: test_file.py
utils/: __init__.py  checksum.py  file_processor.py  session.py
