[tool.poetry]
name = "yod"
version = "0.0.1"
description = "(Y)Upload over download"
authors = ["JaffarA <jaffar.almaleki@gmail.com>"]
license = "Apache License Version 2.0"
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
fastapi = "^0.109.0"
pydantic = "^2.5.3"
python = "^3.11"
uvicorn = "^0.26.0"

[tool.poetry.group.dev.dependencies]
black = "*"
flake8-bugbear = "*"
isort = "*"
mypy = "^1.8.0"
ruff = "*"
pytest = "^7.4.4"

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F", "B"]
ignore = ["B904"]
unfixable = ["B"]
line-length = 128 # black enforces line length, this is to make ruff happy
target-version = "py311"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]
