[tool.poetry]
name = "yod"
version = "0.0.1"
description = "(Y)Upload over download"
authors = ["JaffarA <jaffar.almaleki@gmail.com>"]
license = "Apache License Version 2.0"
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
fastapi = "^0.110.0"
pydantic = "^2.5.3"
python = "^3.11"
uvicorn = "^0.28.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
coverage = "^7.4.0"
flake8-bugbear = "^24.1.17"
isort = "^5.13.2"
mypy = "^1.8.0"
pytest = "^8.0.1"
ruff = "^0.3.2"

[tool.isort]
profile = "black"

[tool.ruff]
lint.select = ["E", "F", "B"]
lint.ignore = ["B904"]
lint.unfixable = ["B"]
line-length = 128 # black enforces line length, this is to make ruff happy
target-version = "py311"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]
"conftest.py" = ["E402", "F401", "F403"]
